2009-03-17 Peter Schuster  <typo3@peschuster.de>

	* small refactoring changes
	* released version 0.1.1

2009-03-12 Peter Schuster  <typo3@peschuster.de>

	* Initial release