@@ -32,6 +32,8 @@ $EM_CONF[$_EXTKEY] = array(
 	'version' => '0.1.1',
 	'constraints' => array(
 		'depends' => array(
+			'php' => '5.2.0-0.0.0',
+			'typo3' => '4.3.0-0.0.0',
 			'cms' => '',
 		),
 		'conflicts' => array(
